fix images on side of boxes, remove image on small screens

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -86,7 +86,7 @@ body, form {
 .side-img-container {
     width: 100%;
     height: 250px;
-    display: block;
+    display: none;
 }
 
 /* Bootstrap media queries */
@@ -106,11 +106,23 @@ body, form {
   .breakpoint-active-sm {
     display: block;
   }
+
+  .side-img-container {
+    width: 100%;
+    height: 250px;
+    display: block;
+  }
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: $medium-devices-min) and (max-width: $medium-devices-max) {
   .breakpoint-active-md-lg {
+    display: block;
+  }
+
+  .side-img-container {
+    width: 100%;
+    height: 250px;
     display: block;
   }
 }
@@ -124,6 +136,12 @@ body, form {
   .breakpoint-active-md-lg-xl--side-card {
     display: none !important;
   }
+
+  .side-img-container {
+      width: 100%;
+      height: 250px;
+      display: block;
+  }
   /*  .breakit {
     display: none;
   }*/
@@ -136,6 +154,12 @@ body, form {
   }
     .breakpoint-active-md-lg-xl--side-card {
     display: none !important;
+  }
+
+  .side-img-container {
+    width: 100%;
+    height: 250px;
+    display: block;
   }
 }
 
