--- a/app/scss/modules/cards.scss
+++ b/app/scss/modules/cards.scss
@@ -142,6 +142,11 @@
     border: 0;
 }
 
+.card-footer {
+	background-color: transparent !important;
+}
+/*
 .card-footer--lightBg {
 	background-color: #fff;
 }
+*/
